JSAI/error/src/test/resources/base/builtins_string-indexing-err.js
var x = "foobar"[6]; //should be undef
print(x)
x
